--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
           </form>
                 <!-- </div> -->
       </div>
-      <div class="col-md text-right">
+      
+             <h2> <a href="https://ra.co/dj/janefitz">Dates</a></h2>
+
+   
+<!--       <div class="col-md text-right">
       <h2> <a href="#dates" data-toggle="collapse">Dates</a></h2>
 
        <div id="dates" class="collapse">
@@ -80,7 +84,7 @@
      </div>
 
        </div>
-       </div>
+       </div> -->
 
       </div>
 
